# muster

./: .dockerignore  .gitignore  CHANGELOG.md  DONE-1.md  DONE-2.md  DONE-3.md  DONE-4.md  DONE-5.md  Dockerfile  LICENSE  Makefile  README.md  constraints.txt  pyproject.toml
.github/workflows/: ci.yml
deploy/: docker-compose.yaml  example.env.template
docs/: CONFIG.md  CONNECTORS.md  DEPLOYMENT.md  PERFORMANCE.md  SECURITY.md  WORKFLOW.md
scripts/: bench.py
src/muster/: __init__.py  __main__.py  assist.py  cli.py  coercion.py  config.py  credentials.py  demo.py  logs.py  manifest.py  mapping.py  pipeline.py  profiling.py  publish.py  readers.py  reconcile.py  records.py  remediation.py  report.py  rules.py  scaffold.py  scheduler.py  security.py
src/muster/targets/: __init__.py  base.py  http.py  postgres.py  rest.py  salesforce.py  sqlite.py
src/muster/web/: __init__.py  app.py  auth.py  data.py
src/muster/web/static/: muster.css
src/muster/web/templates/: base.html  dashboard.html  error.html  exceptions.html  login.html  publishing.html  remediation.html  report.html  review.html  trends.html
tests/: test_assist.py  test_bench.py  test_coercion.py  test_config.py  test_credentials.py  test_demo.py  test_end_to_end.py  test_logs.py  test_manifest.py  test_mapping.py  test_publish.py  test_publish_postgres.py  test_publish_rest.py  test_publish_salesforce.py  test_readers.py  test_reconcile.py  test_records.py  test_remediation.py  test_report.py  test_rules.py  test_scaffold.py  test_scheduler.py  test_web.py
tests/fixtures/: build_fixtures.py  clients_south.csv  customers_east.csv  customers_north.csv  customers_west.xlsx
