[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "muster"
version = "1.0.0"
description = "Consolidate inconsistent spreadsheets into one governed dataset."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Paddy Guest", email = "patrickcguest@proton.me" }]
keywords = ["spreadsheets", "csv", "xlsx", "data-consolidation", "data-quality"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "polars>=1.0",
    "pydantic>=2.7",
    "rapidfuzz>=3.6",
    "PyYAML>=6.0",
    "fastexcel>=0.11",
    "rich>=13.0",
    "XlsxWriter>=3.2",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1",
]
keyring = [
    "keyring>=24",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/patrickcguest/muster"
Repository = "https://github.com/patrickcguest/muster"
Documentation = "https://github.com/patrickcguest/muster/tree/main/docs"
Changelog = "https://github.com/patrickcguest/muster/blob/main/CHANGELOG.md"
Issues = "https://github.com/patrickcguest/muster/issues"

[project.scripts]
muster = "muster.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
muster = ["py.typed", "web/templates/*.html", "web/static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
extend-select = ["I", "B", "UP"]

[tool.mypy]
strict = true
files = ["src/muster"]

# psycopg is an optional dependency (muster[postgres]) imported lazily; the
# override is scoped to that one module, not a blanket ignore.
[[tool.mypy.overrides]]
module = "psycopg"
ignore_missing_imports = true
